Add prerequisites, maven config. Add record basics